# tmuxplain

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
tests/: test_tmux.py
tmuxito/: __init__.py  __main__.py  app.py  config.py  help.py  main.py
tmuxplain/: __init__.py  __main__.py  app.py  config.py  help.py  main.py  tmux.py
