[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tmuxplain"
version = "0.1.0"
description = "tmuxplain — because someone had to explain it to you"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["textual>=0.80"]

[project.scripts]
tmuxplain = "tmuxplain.main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
