[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tmuxito"
version = "0.1.1"
description = "tmux sessions made simple, because you forgot what was running..."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.80",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
tmuxito = "tmuxito.main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
